--- a/test/fixtures/likes.yml
+++ b/test/fixtures/likes.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: one
-  article_id: one
+  user: one
+  article: one
 
 two:
-  user_id: two
-  article_id: two
+  user: two
+  article: two
